[gd_scene load_steps=5 format=3 uid="uid://cmc2r6wefgb3t"]

[ext_resource type="Script" uid="uid://cut068f6ev62v" path="res://utilities/reverse_percentile_calculator.gd" id="1_xrxtg"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ypo3m"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_x3py7"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_2fsmp"]

[node name="ReversePercentileCalculator" type="PanelContainer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -8.0
offset_top = -18.0
offset_right = 8.0
offset_bottom = 18.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xrxtg")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="GridContainer" type="GridContainer" parent="VBoxContainer"]
layout_mode = 2
columns = 2

[node name="Base" type="HBoxContainer" parent="VBoxContainer/GridContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="Label" type="Label" parent="VBoxContainer/GridContainer/Base"]
layout_mode = 2
text = "Base Stat: "

[node name="BaseEdit" type="LineEdit" parent="VBoxContainer/GridContainer/Base"]
layout_mode = 2
size_flags_horizontal = 10
theme_override_styles/focus = SubResource("StyleBoxEmpty_ypo3m")
theme_override_styles/read_only = SubResource("StyleBoxEmpty_x3py7")
theme_override_styles/normal = SubResource("StyleBoxEmpty_2fsmp")
text = "0"
alignment = 2

[node name="Promo" type="HBoxContainer" parent="VBoxContainer/GridContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="Label" type="Label" parent="VBoxContainer/GridContainer/Promo"]
layout_mode = 2
text = "Promotion Bonus: "

[node name="PromoEdit" type="LineEdit" parent="VBoxContainer/GridContainer/Promo"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 10
theme_override_styles/focus = SubResource("StyleBoxEmpty_ypo3m")
theme_override_styles/read_only = SubResource("StyleBoxEmpty_x3py7")
theme_override_styles/normal = SubResource("StyleBoxEmpty_2fsmp")
text = "0"
alignment = 2
editable = false

[node name="StartingLevel" type="HBoxContainer" parent="VBoxContainer/GridContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="Label" type="Label" parent="VBoxContainer/GridContainer/StartingLevel"]
layout_mode = 2
text = "Starting Level: "

[node name="StartingLevelEdit" type="LineEdit" parent="VBoxContainer/GridContainer/StartingLevel"]
layout_mode = 2
size_flags_horizontal = 10
theme_override_styles/focus = SubResource("StyleBoxEmpty_ypo3m")
theme_override_styles/read_only = SubResource("StyleBoxEmpty_x3py7")
theme_override_styles/normal = SubResource("StyleBoxEmpty_2fsmp")
text = "0"
alignment = 2

[node name="CurrentLevel" type="HBoxContainer" parent="VBoxContainer/GridContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="Label" type="Label" parent="VBoxContainer/GridContainer/CurrentLevel"]
layout_mode = 2
text = "Current Level: "

[node name="UnpromotedLevelEdit" type="LineEdit" parent="VBoxContainer/GridContainer/CurrentLevel"]
layout_mode = 2
size_flags_horizontal = 10
theme_override_styles/focus = SubResource("StyleBoxEmpty_ypo3m")
theme_override_styles/read_only = SubResource("StyleBoxEmpty_x3py7")
theme_override_styles/normal = SubResource("StyleBoxEmpty_2fsmp")
text = "0"
alignment = 2

[node name="Slash" type="Label" parent="VBoxContainer/GridContainer/CurrentLevel"]
layout_mode = 2
text = "/"

[node name="PromotedLevelEdit" type="LineEdit" parent="VBoxContainer/GridContainer/CurrentLevel"]
layout_mode = 2
size_flags_horizontal = 10
theme_override_styles/focus = SubResource("StyleBoxEmpty_ypo3m")
theme_override_styles/read_only = SubResource("StyleBoxEmpty_x3py7")
theme_override_styles/normal = SubResource("StyleBoxEmpty_2fsmp")
text = "0"
alignment = 2

[node name="Growth" type="HBoxContainer" parent="VBoxContainer/GridContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="Label" type="Label" parent="VBoxContainer/GridContainer/Growth"]
layout_mode = 2
text = "Growth Rate: "

[node name="GrowthEdit" type="LineEdit" parent="VBoxContainer/GridContainer/Growth"]
layout_mode = 2
size_flags_horizontal = 10
theme_override_styles/focus = SubResource("StyleBoxEmpty_ypo3m")
theme_override_styles/read_only = SubResource("StyleBoxEmpty_x3py7")
theme_override_styles/normal = SubResource("StyleBoxEmpty_2fsmp")
text = "0"
alignment = 2

[node name="PercentSign" type="Label" parent="VBoxContainer/GridContainer/Growth"]
layout_mode = 2
size_flags_horizontal = 10
text = "%"

[node name="Percentile" type="HBoxContainer" parent="VBoxContainer/GridContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="Label" type="Label" parent="VBoxContainer/GridContainer/Percentile"]
layout_mode = 2
text = "Percentile: "

[node name="PercentileEdit" type="LineEdit" parent="VBoxContainer/GridContainer/Percentile"]
layout_mode = 2
size_flags_horizontal = 10
theme_override_styles/focus = SubResource("StyleBoxEmpty_ypo3m")
theme_override_styles/read_only = SubResource("StyleBoxEmpty_x3py7")
theme_override_styles/normal = SubResource("StyleBoxEmpty_2fsmp")
text = "0"
alignment = 2

[node name="Result" type="Label" parent="VBoxContainer"]
layout_mode = 2

[connection signal="text_changed" from="VBoxContainer/GridContainer/Base/BaseEdit" to="." method="_on_base_edit_text_changed"]
[connection signal="text_changed" from="VBoxContainer/GridContainer/Promo/PromoEdit" to="." method="_on_promo_edit_text_changed"]
[connection signal="text_changed" from="VBoxContainer/GridContainer/StartingLevel/StartingLevelEdit" to="." method="_on_starting_level_edit_text_changed"]
[connection signal="text_changed" from="VBoxContainer/GridContainer/CurrentLevel/UnpromotedLevelEdit" to="." method="_on_unpromoted_level_edit_text_changed"]
[connection signal="text_changed" from="VBoxContainer/GridContainer/CurrentLevel/PromotedLevelEdit" to="." method="_on_promoted_level_edit_text_changed"]
[connection signal="text_changed" from="VBoxContainer/GridContainer/Growth/GrowthEdit" to="." method="_on_growth_edit_text_changed"]
[connection signal="text_changed" from="VBoxContainer/GridContainer/Percentile/PercentileEdit" to="." method="_on_percentile_edit_text_changed"]
